	- get_host_name must be called by using
	  Mail::MIMEDefang::Net::get_host_name().
	- header_timezone, rfc2822_date and gen_msgid_header must be called
	  using Mail::MIMEDefang::RFC2822 namespace.
	- read_results sub must be called
	  using Mail::MIMEDefang::Unit namespace.
	- To read MIMEDefang version, md_version() must be used,
	  version() is still accessible as Mail::MIMEDefang::version

2022-02-10 Giovanni Bechis <g.bechis@snb.it>

        * switch to Digest::SHA

2022-02-04 Giovanni Bechis <g.bechis@snb.it>

        * split mimedefang.pl code in Perl modules

2022-02-02 Giovanni Bechis <g.bechis@snb.it>

        * add re_match_in_7zip_directory to check for files
	  inside 7zip archives

2021-12-17 Giovanni Bechis <g.bechis@snb.it>

	* MIMEDefang 2.86 RELEASED

2021-12-12 Giovanni Bechis <g.bechis@snb.it>

        * Rspamd support by forking rspamc(1) binary
        is now deprecated, added Rspamd support by implementing
        its protocol

2021-12-09 Giovanni Bechis <g.bechis@snb.it>

	* fallback to plaintext when md_check_against_smtp_server
	fails SSL connection for unknown reasons

2021-08-25 Giovanni Bechis <g.bechis@snb.it>

	* MIMEDefang 2.85 RELEASED

2021-07-28 Giovanni Bechis <g.bechis@snb.it>

	* add experimental support to scan emails with Rspamd antispam

2021-07-20 Giovanni Bechis <g.bechis@snb.it>

	* remove --enable_cleanup_with_rm "configure" parameter,
	switch to non reentrant version of readdir(3)

2021-04-20 Dianne Skoll <dianne@skoll.ca>

	* Obtain the Queue-ID as early as possible in the SMTP
	session. Requires the "-y" command-line option to mimedefang.

	* Add support for USE_SETSYMLIST in the system unit and Red Hat
	init script; setting USE_SETSYMLIST=yes adds the "-y" command-line
	option to mimedefang.

2020-11-18 Giovanni Bechis <gbechis@pccc.com>

	* mimedefang.pl: Add support for a configuration file
	to separate data from code

2020-08-19 Giovanni Bechis <g.bechis@snb.it>
